# collaborative-robotic-sanding

./: .colcon_defaults.yaml  .setup_mixins.sh  .travis.yml  README.md  crs.rosinstall  eloquent.dockerfile
crs_area_selection/: CMakeLists.txt  package.xml
crs_area_selection/include/crs_area_selection/: area_selector.h  area_selector_parameters.h  filter.h  filter_impl.h  selection_artist.h
crs_area_selection/src/: selection_artist.cpp
crs_gui/: CMakeLists.txt
crs_gui/include/crs_gui/widgets/: crs_application_widget.h  crs_application_widget_old.h  part_selection_widget.h  state_machine_interface_widget.h
crs_gui/src/nodes/: crs_application_demo.cpp  part_selection_widget_demo.cpp
crs_gui/src/widgets/: crs_application_widget.cpp  crs_application_widget_old.cpp  part_selection_widget.cpp  state_machine_interface_widget.cpp
crs_gui/ui/: crs_application.ui  part_selection.ui  state_machine_interface.ui
crs_motion_planning/src/: freespace_planning_server.cpp  path_planning_utils.cpp
crs_msgs/: CMakeLists.txt
