<package format="2">
  <name>crs_area_selection</name>
  <version>0.1.0</version>

  <description>
    The crs_area_selection package contains a number of tools to aid
    selection of submeshes in RViz using the publish point tool
  </description>

  <author email="david.merz@swri.org">David Merz, Jr.</author>
  <maintainer email="david.merz@swri.org">David Merz, Jr.</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
<!--
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>opp_msgs_serialization</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>opp_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>-->
  <depend>visualization_msgs</depend>
  <depend>crs_msgs</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
